# chatassist

./: README.md  __init__.py  api.py  cli.py  conversation.py  dev-requirements.txt  fix_flake8.py  gui.py  pyproject.toml  requirements.txt  setup.py  utils.py
.github/workflows/: publish-to-pypi.yml
chatassist/: __init__.py  api.py  cli.py  conversation.py  gui.py  utils.py
examples/: 10_travel_guide.py  11_basic_chat_gui.py  12_example1_in_gui.py  13_example3_in_gui.py  14_advanced_chatbot_gui.py  1_simple_greeting.py  2_personalized_reeting.py  3_faq_bot.py  4_conversational_loop.py  5_weather_bot.py  6_quiz_master.py  7_math_solver.py  8_dictionary_bot.py  9_programming_helper.py
tests/: test_api.py  test_cli.py  test_conversation.py  test_gui.py  test_imports.py  test_utils.py
