[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatassist"
version = "0.1.0"
description = "A Python library for interacting with OpenAI's ChatGPT API."
authors = [
    {name = "Daryoush Alipour", email = "ai.tirotir@gmail.com"}
]
license = {text = "MIT"}
keywords = ["chatgpt", "openai", "api", "assistant"]
dependencies = [
    "requests",
    "argparse",
    "tk",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/tirotir-ir/chatassist"
BugTracker = "https://github.com/tirotir-ir/chatassist/issues"
Documentation = "https://github.com/tirotir-ir/chatassist/wiki"
SourceCode = "https://github.com/tirotir-ir/chatassist"

